# Process-planner

./: CMakeLists.txt  Planificador de procesos.rar  main.cpp
Planificador de procesos/: ABBProcesos.cpp  ABBProcesos.h  BST.cpp  BST.h  Cola.cpp  Cola.h  Lista.cpp  Lista.h  ListaProcesos.cpp  ListaProcesos.h  NodoABB.cpp  NodoABB.h  NodoBST.cpp  NodoBST.h  NodoCola.cpp  NodoCola.h  NodoLista.cpp  NodoLista.h  NodoListaProcesos.cpp  NodoListaProcesos.h  NodoPila.cpp  NodoPila.h  Nucleo.cpp  Nucleo.h  Pila.cpp  Pila.h  Planificador.cpp  Planificador.h  Proceso.cpp  Proceso.h  debug2.txt  gdb.txt  global.cpp  global.h  main.cpp  main1.cpp  main2.cpp  main2_test.cpp  mainPruevaAVL.cpp  main_arbolprueba.cpp  (+2 more)
